--- a/apps/ethang-astro/src/pages/blog/beyond-optional-chaining.astro
+++ b/apps/ethang-astro/src/pages/blog/beyond-optional-chaining.astro
@@ -12,7 +12,12 @@ import BlogLayout from "../../layouts/BlogLayout.astro";
   description="A concise comparison of optional chaining and lodash.get for safely accessing nested properties in JavaScript"
 >
   <h1>Optional Chaining vs. lodash.get: Comparative Analysis</h1>
-  <WordCount image={{src: optionalChainingImage, alt: "An abstract, dark-toned image depicting the concept of safely accessing nested data."}} />
+  <WordCount
+    image={{
+      src: optionalChainingImage,
+      alt: "An abstract, dark-toned image depicting the concept of safely accessing nested data.",
+    }}
+  />
 
   <p>
     JavaScript developers frequently encounter the problem of safely accessing
