--- a/apps/ethang-astro/src/pages/blog/how-i-code.astro
+++ b/apps/ethang-astro/src/pages/blog/how-i-code.astro
@@ -10,7 +10,9 @@ import BlogLayout from "../../layouts/BlogLayout.astro";
 
 <BlogLayout title="How I Code">
   <h1>How I Code</h1>
-  <WordCount image={{src: techImage, imgClass: "max-w-md", alt: "tech abstract"}} />
+  <WordCount
+    image={{ src: techImage, imgClass: "max-w-md", alt: "tech abstract" }}
+  />
   <p>
     What follows are my personal opinions formed through years of hands-on
     experience in software development. These perspectives work well for me, but
