--- a/apps/ethang-astro/src/pages/blog/state-management-classes.astro
+++ b/apps/ethang-astro/src/pages/blog/state-management-classes.astro
@@ -266,7 +266,13 @@ function JobApplicationsList() {
 
 <BlogLayout title="Building a State Management System with Classes in React">
   <h1>Building a State Management System with Classes in React</h1>
-  <WordCount image={{imgClass: "wax-w-sm", src: chromaticSwirl, alt: "chromatic swirl"}} />
+  <WordCount
+    image={{
+      imgClass: "wax-w-sm",
+      src: chromaticSwirl,
+      alt: "chromatic swirl",
+    }}
+  />
   <p>
     In the ever-evolving landscape of React state management, we've seen
     countless libraries and patterns come and go. From Redux to MobX, Zustand to
