--- a/apps/ethang-astro/src/pages/blog/understanding-recovering-from-burnout.astro
+++ b/apps/ethang-astro/src/pages/blog/understanding-recovering-from-burnout.astro
@@ -29,7 +29,12 @@ import BlogLayout from "../../layouts/BlogLayout.astro";
     Navigating the Depths of Exhaustion: Understanding and Recovering from
     Burnout
   </h1>
-  <WordCount image={{src: personAtCrossroads, alt: "A silhouette of a person standing at a crossroads, with one path leading to a dark, chaotic storm and another path opening up to a calm, softly lit landscape. Use a soft, encouraging color palette for the calm side, contrasting with muted, heavy tones for the storm side. Focus on a sense of transition and hope."}} />
+  <WordCount
+    image={{
+      src: personAtCrossroads,
+      alt: "A silhouette of a person standing at a crossroads, with one path leading to a dark, chaotic storm and another path opening up to a calm, softly lit landscape. Use a soft, encouraging color palette for the calm side, contrasting with muted, heavy tones for the storm side. Focus on a sense of transition and hope.",
+    }}
+  />
   <p>
     If you've been pushing yourself relentlessly, feeling a pervasive sense of
     dread about work, and experiencing a constant mental and physical drain,
