--- a/apps/ethang-astro/src/pages/blog/ai-paradox.astro
+++ b/apps/ethang-astro/src/pages/blog/ai-paradox.astro
@@ -9,7 +9,12 @@ import BlogLayout from "../../layouts/BlogLayout.astro";
     The AI Paradox: Why Some Developers Are Underwhelmed and Others See a
     Revolution
   </h1>
-  <WordCount image={{src: aiParadoxImage, alt: "An abstract image illustrating the \"AI Paradox.\" On the left, a developer appears overwhelmed, with hands on their head amidst complex, swirling code and abstract AI elements. On the right, another developer looks confident and a bit triumphant, surrounded by organized code and circuit-like patterns, representing the revolutionary potential of AI. The background is a mix of digital patterns and glowing lines, symbolizing the digital world and the evolving tech landscape."}} />
+  <WordCount
+    image={{
+      src: aiParadoxImage,
+      alt: 'An abstract image illustrating the "AI Paradox." On the left, a developer appears overwhelmed, with hands on their head amidst complex, swirling code and abstract AI elements. On the right, another developer looks confident and a bit triumphant, surrounded by organized code and circuit-like patterns, representing the revolutionary potential of AI. The background is a mix of digital patterns and glowing lines, symbolizing the digital world and the evolving tech landscape.',
+    }}
+  />
 
   <p>
     For months, the talk about <strong
