allow code selects
Signed-off-by: ethang <hello@ethang.email>

--- a/apps/ethang-astro/src/components/CodeBlock.astro
+++ b/apps/ethang-astro/src/components/CodeBlock.astro
@@ -15,7 +15,7 @@ const codeHtml = hljs.highlight(code, {
 ---
 
 <pre
-  class="overflow-x-auto select-none max-w-full">
+  class="overflow-x-auto max-w-full">
     <code class={resolvedLanguage}>
     <Fragment set:html={codeHtml} />
     </code>
