--- a/apps/ethang-astro/src/pages/courses.astro
+++ b/apps/ethang-astro/src/pages/courses.astro
@@ -12,7 +12,7 @@ import {
 ---
 
 <Layout>
-  <main class="prose">
+  <main class="prose mx-auto">
     <h1>Recommended Courses</h1>
     <p>
       This list is meant as a way to provide a straightforward curriculum of
