--- a/apps/ethang-astro/src/components/BlogWidgets.astro
+++ b/apps/ethang-astro/src/components/BlogWidgets.astro
@@ -115,5 +115,5 @@ const { image } = Astro.props;
 
   <p class="text-sm text-gray-500 mb-4 word-count-display">Calculating...</p>
   {image && <LocalImage {...image} loading="eager" />}
-  <div id="toc" class="hidden"></div>
+  <div id="toc" class="hidden select-none"></div>
 </Fragment>
