--- a/apps/ethang-astro/src/pages/index.astro
+++ b/apps/ethang-astro/src/pages/index.astro
@@ -12,6 +12,7 @@ import aiParadoxImage from "../images/ai-paradox.png";
 import choaticState from "../images/chaotic-state-to-simplicity.png";
 import reactSimpleComplex from "../images/react-simple-complex.png";
 import nodesImage from "../images/nodes-computer.png";
+import aiDiscourseImage from "../images/ai-discourse.png";
 
 const cards = [
   {
@@ -19,6 +20,12 @@ const cards = [
     alt: "tech abstract",
     title: "How I Code",
     href: "/blog/how-i-code",
+  },
+  {
+    src: aiDiscourseImage,
+    alt: "Abstract representation of AI with glowing neural networks receding into space, human hands interacting with digital interfaces, and waves of light representing the internet alongside focused beams for AI tools.",
+    title: "Navigating the AI Discourse: Deconstructing Hype, Fear, and the Human Impact of LLMs",
+    href: "/blog/ai-discourse"
   },
   {
     src: nodesImage,
