--- a/apps/ethang-angular/src/app/routes/courses.component.html
+++ b/apps/ethang-angular/src/app/routes/courses.component.html
@@ -12,7 +12,7 @@
     >
     <app-typography-p className="my-4"
       >These
-      @if (courseCountResource.value()) {
+      @if (courseCountResource.hasValue()) {
         <span class="text-amber-500"
           >{{ courseCountResource.value() }} courses</span
         >
