--- a/apps/ethang-hono/public/index.css
+++ b/apps/ethang-hono/public/index.css
@@ -944,6 +944,9 @@
   .m-4 {
     margin: calc(var(--spacing) * 4);
   }
+  .mx-0 {
+    margin-inline: calc(var(--spacing) * 0);
+  }
   .mx-auto {
     margin-inline: auto;
   }
@@ -973,6 +976,9 @@
   }
   .mt-1 {
     margin-top: calc(var(--spacing) * 1);
+  }
+  .mt-1\.5 {
+    margin-top: calc(var(--spacing) * 1.5);
   }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
@@ -1678,6 +1684,9 @@
   .resize {
     resize: both;
   }
+  .scroll-m-20 {
+    scroll-margin: calc(var(--spacing) * 20);
+  }
   .list-inside {
     list-style-position: inside;
   }
@@ -1908,6 +1917,10 @@
   .border-l-4 {
     border-left-style: var(--tw-border-style);
     border-left-width: 4px;
+  }
+  .border-none {
+    --tw-border-style: none;
+    border-style: none;
   }
   .dark {
     & .apexcharts-canvas .apexcharts-tooltip {
@@ -2280,6 +2293,9 @@
   .py-6 {
     padding-block: calc(var(--spacing) * 6);
   }
+  .ps-6 {
+    padding-inline-start: calc(var(--spacing) * 6);
+  }
   .pt-2 {
     padding-top: calc(var(--spacing) * 2);
   }
@@ -2314,11 +2330,17 @@
       color: heading !important;
     }
   }
+  .pb-0 {
+    padding-bottom: calc(var(--spacing) * 0);
+  }
   .pb-2 {
     padding-bottom: calc(var(--spacing) * 2);
   }
   .pb-4 {
     padding-bottom: calc(var(--spacing) * 4);
+  }
+  .pl-6 {
+    padding-left: calc(var(--spacing) * 6);
   }
   .pl-8 {
     padding-left: calc(var(--spacing) * 8);
@@ -2340,6 +2362,10 @@
   .text-2xl {
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
+  }
+  .text-3xl {
+    font-size: var(--text-3xl);
+    line-height: var(--tw-leading, var(--text-3xl--line-height));
   }
   .text-4xl {
     font-size: var(--text-4xl);
@@ -2470,6 +2496,12 @@
     --tw-tracking: var(--tracking-widest);
     letter-spacing: var(--tracking-widest);
   }
+  .text-balance {
+    text-wrap: balance;
+  }
+  .text-wrap {
+    text-wrap: wrap;
+  }
   .wrap-break-word {
     overflow-wrap: break-word;
   }
@@ -2578,6 +2610,9 @@
   .not-italic {
     font-style: normal;
   }
+  .no-underline {
+    text-decoration-line: none;
+  }
   .underline {
     text-decoration-line: underline;
   }
@@ -2646,6 +2681,21 @@
     -webkit-user-select: none;
     user-select: none;
   }
+  .not-first\:mt-0 {
+    &:not(*:first-child) {
+      margin-top: calc(var(--spacing) * 0);
+    }
+  }
+  .not-first\:mt-1\.5 {
+    &:not(*:first-child) {
+      margin-top: calc(var(--spacing) * 1.5);
+    }
+  }
+  .not-first\:mt-6 {
+    &:not(*:first-child) {
+      margin-top: calc(var(--spacing) * 6);
+    }
+  }
   .group-open\:rotate-180 {
     &:is(:where(.group):is([open], :popover-open, :open) *) {
       rotate: 180deg;
@@ -2689,6 +2739,11 @@
       @media (hover: hover) {
         visibility: visible;
       }
+    }
+  }
+  .first\:mt-0 {
+    &:first-child {
+      margin-top: calc(var(--spacing) * 0);
     }
   }
   .hover\:translate-x-1 {
@@ -3389,6 +3444,11 @@
           }
         }
       }
+    }
+  }
+  .\[\&\:not\(\:first-child\)\]\:mt-6 {
+    &:not(:first-child) {
+      margin-top: calc(var(--spacing) * 6);
     }
   }
 }
